# business-glossary-semantic-agent

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
appsflyer_metrics_agent/: agent.py
appsflyer_metrics_sub_agent/: __init__.py
bigquery_analyst_agent/: agent.py
bigquery_analyst_sub_agent/: __init__.py
mannger_agent/: __init__.py  agent.py
